force-app/main/default/objects/Scheduled_Times__c/Scheduled_Times__c.object-meta.xml
<CustomObject>
    <label>Scheduled Times</label>
    <nameField>
        <displayFormat>S N - {0000}</displayFormat>
        <label>Schedule No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>