force-app/main/default/objects/Scheduled_Times__c/fields/Schedule_Report__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule Run</label>
    <referenceTo>Schedule_Report__c</referenceTo>
    <relationshipLabel>Scheduled Run</relationshipLabel>
    <relationshipName>Scheduled_Times</relationshipName>
    <type>Lookup</type>
</CustomField>