force-app/main/default/objects/Scheduled_Times__c/fields/Schedule_Report_com__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Report_com__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed Run</label>
    <referenceTo>Schedule_Report__c</referenceTo>
    <relationshipLabel>Completed Run</relationshipLabel>
    <relationshipName>Scheduled_Times1</relationshipName>
    <type>Lookup</type>
</CustomField>